[tool:pytest]
addops = --showlocals
minversion = 3.0
testpaths = tests
;flake8-ignore =
;    E501
;    setup.py F821
[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
application-import-names = datetoken, tests
import-order-style = smarkets
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
